# c0mpiler

./: Cargo.toml
src/: ir.rs  irgen.rs  lib.rs  main.rs  mir.rs
src/ir/: attribute.rs  cfg.rs  core.rs  core_builder.rs  core_inst.rs  core_int.rs  core_value.rs  destructor.rs  ir_output.rs  ir_type.rs  layout.rs  opt.rs
src/ir/opt/: cfg_simpilfy.rs  dce.rs  function_inline.rs  mem2reg.rs  merge_return.rs  sccp.rs
src/irgen/: expr.rs  extra.rs  pat.rs  value.rs  visitor.rs
src/mir/: layout.rs  lower.rs  macros.rs  opt.rs  print.rs  regalloc.rs  rv32im.rs
src/mir/lower/: branch_relax.rs  layout.rs  logue.rs  phi.rs  regalloc.rs
src/mir/opt/: fallthrough.rs  peephole.rs
src/mir/rv32im/: print.rs
tests/: asm_test.rs  ir_test.rs
