[package]
name = "c0mpiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ena = "0.14.3"
enum-as-inner = "0.6.1"
fancy-regex = "0.16.2"
paste = { package = "pastey", version = "0.1.1" }
regex = "1.11.3"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
slotmap = "1.1.1"
strum = {version = "0.27.2", features = ["derive"]}
